--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,21 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/green_2</item>
+    </style>
+
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/green_2</item>
+
+        <!-- Customize your theme here. -->
+        <item name="colorControlNormal">@color/blue_dark</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlHighlight">@color/green_light</item>
+        <item name="android:textColorHint">@color/white_dark</item>
+        <item name="android:textColorHintInverse">@color/blue_light</item>
+
     </style>
 
 </resources>
