After Setting Profile v2 [ 17-jun-2016 ]

--- a/app/src/main/res/layout/activity_add_update_lens.xml
+++ b/app/src/main/res/layout/activity_add_update_lens.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rounded_edittext"
-            android:hint="Lens Name"
+            android:hint="*Lens Name"
             android:inputType="text"
             android:maxLines="1"
             android:paddingLeft="10dp"
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rounded_edittext"
-            android:hint="Focus Length(mm)"
+            android:hint="*Focus Length(mm, 1 to 10000)"
             android:inputType="numberDecimal"
             android:maxLines="1"
             android:paddingLeft="10dp"
@@ -64,9 +64,10 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/rounded_edittext"
         android:layout_height="50dp"
-        android:text="Is Fisheye"
+        android:text="*Is Fisheye"
         android:paddingLeft="10dp"
         android:textOff="No"
+        android:textColor="@color/white"
         android:textOn="Yes"
         android:textSize="20sp" />
     </LinearLayout>
