--- a/app/src/main/res/layout/fragment_mr_stepone.xml
+++ b/app/src/main/res/layout/fragment_mr_stepone.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edittext"
-                android:hint="Profile Name"
+                android:hint="*Profile Name"
                 android:inputType="text"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edittext"
-                android:hint="Number of rows"
+                android:hint="*Number of rows(2 to 30)"
                 android:inputType="numberDecimal"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
