--- a/app/src/main/res/layout/activity_add_update_camera.xml
+++ b/app/src/main/res/layout/activity_add_update_camera.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edittext"
-                android:hint="Camera Name"
+                android:hint="*Camera Name"
                 android:inputType="text"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edittext"
-                android:hint="Sensor Width(mm)"
+                android:hint="*Sensor Width(mm, 0 to 100)"
                 android:inputType="numberDecimal"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rounded_edittext"
-                android:hint="Sensor Height(mm)"
+                android:hint="*Sensor Height(mm, 0 to 100)"
                 android:inputType="numberDecimal"
                 android:maxLines="1"
                 android:paddingLeft="10dp"
