--- a/app/src/main/res/layout/fragment_mr_steptwo.xml
+++ b/app/src/main/res/layout/fragment_mr_steptwo.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Position"
+            android:text="Positions"
             android:textColor="@color/white"
             android:textSize="25sp" />
 
