--- a/app/src/main/res/layout/activity_shooting_profile.xml
+++ b/app/src/main/res/layout/activity_shooting_profile.xml
@@ -7,6 +7,7 @@
     tools:context="com.creative.roboticcameraapp.ShootingProfile">
 
     <LinearLayout
+        android:id="@+id/ll_shoting_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
