--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,7 +103,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Adhoc"
+                android:text="Ad Hoc / Initialize"
                 android:textColor="@color/white"
                 android:textSize="25sp" />
         </LinearLayout>
